# RidesharingUniversality

./: CMakeLists.txt  LICENSE  README.md  readme.md
.github/workflows/: build-and-run.yml  python-testing.yml
Code/: CMakeLists.txt  README_data_file_structure.txt  README_malte_network_ridesharing_simulations.txt
Code/include/: customer.h  delaunay_network.h  measurement_collector.h  ridesharing_sim.h  traffic_network.h  transporter.h
Code/src/: main.cpp  measurement_collector.cpp  ridesharing_sim.cpp  traffic_network.cpp  transporter.cpp
Data/Figure 2/Fig_2A/: plot_Fig2_a.gp
Data/Figure 3/: B_eff.tex  effcomp4_complete.txt  effcomp_complete_0.00_0.80.txt
Data/Figure 4/: E_target_plot.tex  b_theta_3cayley_tree_N_46_E_aim_0.7500_xa3_exp.txt  b_theta_complete_graph_N_5_E_aim_0.7500_xa3_exp.txt  b_theta_delaunay_random_torus_N_100_E_aim_0.7500_xa3_exp.txt  b_theta_delaunay_random_torus_N_25_E_aim_0.7500_xa3_exp.txt  b_theta_grid_N_100_E_aim_0.7500_xa3_exp.txt  b_theta_ring_N_100_E_aim_0.7500_xa3_exp.txt  b_theta_ring_N_25_E_aim_0.7500_xa3_exp.txt  b_theta_simplified_city_N_16_E_aim_0.7500_xa3_exp.txt  b_theta_torus_N_100_E_aim_0.7500_xa3_exp.txt  b_theta_torus_N_25_E_aim_0.7500_xa3_exp.txt  b_theta_two_nodes_N_2_E_aim_0.7500_xa3_exp.txt  minimal_cap_5_B_10_C.txt  minimal_cap_5_B_1_C.txt  minimal_results.tex
Data/Figure S1/: 3cayley_tree_N_46_p_approx_measured_final_extended.txt  (+6 more)
include/: customer.h  measurement_collector.h  transporter.h
src/: customer.cpp  delaunay_network.cpp  main.cpp  network.hpp  ridesharing_sim.cpp  traffic_network.cpp  transporter.cpp
(+38 files in other folders)
